# cmake-common

./: .SRCINFO  .appveyor.yml  .clang-format  .git-blame-ignore-revs  .pylintrc  .travis.yml  DEVELOPMENT.md  LICENSE.txt  Makefile  PKGBUILD  README.Arch  README.md  appveyor.yml  common.cmake  pyproject.toml  setup.cfg
.ci/: Makefile  run_foo.ps1  verify_arch.sh  verify_symbols.sh
.github/actions/build-boost/: action.yml
.github/actions/build-example/: action.yml
.github/actions/check-arch/: action.yml
.github/actions/check-boost-bootstrapped/: action.yml
.github/actions/check-boost-download/: action.yml
.github/actions/check-boost-libraries/: action.yml
.github/actions/check-runtime-library/: action.yml
.github/actions/check-symbols/: action.yml
.github/actions/common-variables/: action.yml
.github/actions/download-boost/: action.yml
.github/actions/run-example/: action.yml
.github/actions/run-example-boost/: action.yml
.github/actions/software-environment/: action.yml
.github/workflows/: aur.yml  basic.yml  boost_clang_windows.yml  boost_download.yml  boost_toolsets.yml  ci.yml  ci_appveyor.yml  ci_github.yml  ci_travis.yml  cygwin_static_libstdc++.yml  example_toolsets.yml  lint.yml  msvc_versions.yml  publish.yml
boost/toolchains/: README.md  mingw-w64-x64-exe.jam  mingw-w64-x64.jam  mingw-w64-x86-exe.jam
ci/: build.py  build_appveyor.py  build_travis.py
ci/boost/: build.py  build_travis.py
cmake/: common.cmake
cmake/examples/boost/: CMakeLists.txt  foo.cpp
cmake/examples/dynamic/: CMakeLists.txt  bar.hpp  baz.hpp  foo.cpp
cmake/examples/simple/: CMakeLists.txt
cmake/examples/static/: CMakeLists.txt  foo.cpp
cmake/toolchains/: README.md  gcc-x64.cmake  mingw-w64-x64.cmake  mingw-w64-x86.cmake
docs/: boost.md  ci.md  clang-format.md  cmake.md  ctest-driver.md  project-clang-format.md
examples/boost/: CMakeLists.txt  foo.cpp
examples/dynamic/: CMakeLists.txt  baz.cpp  baz.hpp
examples/simple/: CMakeLists.txt
examples/static/: CMakeLists.txt  bar.cpp  foo.cpp
project/: build.py  configuration.py  linkage.py  mingw.py  os.py  platform.py  toolchain.py  toolset.py  utils.py  version.py
project/boost/: README.md  archive.py  build.py  directory.py  download.py  toolchain.py  toolset.py  version.py
project/ci/: boost.py  build.py  cmake.py  dirs.py
project/ci/appveyor/: boost.py  cmake.py  generator.py
project/ci/github/: boost.py  cmake.py
project/ci/travis/: boost.py  cmake.py
project/cmake/: README.md  build.py  toolchain.py  toolset.py
test/examples/boost/: CMakeLists.txt
test/examples/simple/: CMakeLists.txt  foo.cpp
test/scripts/: verify_arch.ps1  verify_symbols.ps1  verify_symbols.sh
toolchains/: README.md  gcc-x86.cmake  mingw-w64-x86.cmake
toolchains/boost/: README.md  mingw-w64-x64-exe.jam  mingw-w64-x86.jam
toolchains/cmake/: README.md  mingw-w64-x64.cmake
tools/: clang-format.py  ctest-driver.py  project-clang-format  project-clang-format.py
tools/clang-format/: clang-format.sh
