[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cmake_common"
description = "Utilities to help develop C++/CMake projects"
license = {text = "MIT"}
dynamic = ["version"]
authors = [{name = "Egor Tensin", email = "Egor.Tensin@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    'importlib-metadata ~= 4.0 ; python_version < "3.8"',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
"Homepage" = "https://github.com/egor-tensin/cmake-common"
"Bug Tracker" = "https://github.com/egor-tensin/cmake-common/issues"

[project.scripts]
boost-build = "project.boost.build:_main"
boost-download = "project.boost.download:_main"
ci-boost = "project.ci.boost:main"
ci-cmake = "project.ci.cmake:main"
cmake-build = "project.cmake.build:main"

[tool.setuptools]
script-files = [
    "tools/ctest-driver.py",
    "tools/project-clang-format.py",
]

[tool.setuptools.data-files]
"share/cmake" = ["common.cmake"]

[tool.setuptools_scm]
