[build-system]
# The SPDX license identifiers are available from 77.0.3:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license-and-license-files
requires = ["setuptools >= 77.0.3", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cmake_common"
description = "Utilities to help develop C++/CMake projects"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
authors = [{name = "Egor Tensin", email = "egor@tensin.name"}]
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
"Homepage" = "https://github.com/egor-tensin/cmake-common"
"Bug Tracker" = "https://github.com/egor-tensin/cmake-common/issues"

[project.scripts]
boost-build = "project.boost.build:_main"
boost-download = "project.boost.download:_main"
project-build = "project.build:main"

[tool.setuptools]
script-files = [
    "tools/ctest-driver.py",
    "tools/project-clang-format.py",
]

[tool.setuptools_scm]
