[metadata]
name = cmake_common_egor_tensin
version = 0.1
author = Egor Tensin
author_email = Egor.Tensin@gmail.com
description = Various utilities to help develop C++/CMake projects
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/egor-tensin/cmake-common
project_urls =
    Bug Tracker = https://github.com/egor-tensin/cmake-common/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Topic :: Software Development :: Build Tools

[options]
packages = find:
scripts =
    tools/project-clang-format
    tools/ctest-driver
#python_requires = >=3.6

[options.entry_points]
console_scripts =
    boost-download = project.boost.download:_main
    boost-build = project.boost.build:_main
    cmake-build = project.cmake.build:main
    ci-cmake = project.ci.cmake:main
    ci-boost = project.ci.boost:main
