[metadata]
name = cmake_common
version = 2.4
author = Egor Tensin
author_email = Egor.Tensin@gmail.com
description = Various utilities to help develop C++/CMake projects
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/egor-tensin/cmake-common
project_urls =
    Bug Tracker = https://github.com/egor-tensin/cmake-common/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Topic :: Software Development :: Build Tools

[options]
packages = find:
python_requires = >=3.6
scripts =
    tools/project-clang-format.py
    tools/ctest-driver.py

[options.data_files]
share/cmake = common.cmake

[options.entry_points]
console_scripts =
    boost-build = project.boost.build:_main
    boost-download = project.boost.download:_main
    ci-boost = project.ci.boost:main
    ci-cmake = project.ci.cmake:main
    cmake-build = project.cmake.build:main
